task-dashboard/styles/globals.css
:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-size: clamp(14px, 1vw + 0.5rem, 18px);
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 1rem;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

input, button {
  padding: 0.5rem;
  margin: 0.25rem 0;
}

#new-task-form > * {
  width: 100%;
  height: 2rem;
  margin: 0;
}

select {
  height: 2rem;
}

#task-table tbody td:last-child .task-actions {
  display: flex;
  gap: 0.5rem;
  justify-content: center;
}

#task-table td {
  padding: 0 15px;
}

